# role-manager

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  index.js  pyproject.toml  requirements.txt  role-manager.db
backend/app/: __init__.py  main.py  worker.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/schemas/: __init__.py  events.py  teams.py
backend/app/services/: assignments.py  dlq_replay.py  messaging.py  replay_audit.py  teams.py
backend/tests/: test_assignments_endpoint.py  test_event_schemas.py  test_events_endpoint.py  test_teams_endpoint.py  test_worker_reliability.py
public/: index.html
src/: App.js  index.css
src/components/: history.jsx  menuItems.jsx  navbar.jsx  roleCalculator.jsx  roleCard.jsx  rolesList.jsx  tableHistory.jsx  teamList.jsx  users.jsx
src/components/data/: menuItems.jsx  roles.jsx  user.jsx
